# blender-material-diffusion

./: .gitignore  README.md  blender_manifest.toml  pyproject.toml
src/functions/: utils.py
src/operators/: __init__.py  cleanup_operators.py  generation_operators.py  history_collection_operators.py
src/panels/: __init__.py  backend_panel.py  cleanup_panel.py  diffusion_panel.py  history_panel.py
src/properties/: backend_properties.py  diffusion_properties.py  history_properties.py
workflows/: flux.json  generic.json
